--- a/dar/pom.xml
+++ b/dar/pom.xml
@@ -101,6 +101,7 @@
 
                         <docker.Image name="ha-proxy">
                             <image>eeacms/haproxy:1.5</image>
+                            <registryHost>{{PROJECT_REGISTRY_HOST}}</registryHost>
                             <network>petnetwork</network>
                             <labels>
                                 <value>zone=front</value>
